# M8O-409B-20

./: .gitignore  KP.py  KP_function1.py  KP_function2.py  KP_function3.py  Plotting.py  README.md  cp.py  lab6.py  lab8.py  lab_5.py  lab_6.py  lab_7.py  lab_8.py  main (1).py
Labs 5678/: Laba5.py  Laba6.py  Laba7.py  Laba8.py
alymov/lab_6/: CMakeLists.txt  README.md  main.py  prog
alymov/lab_6/labs/: lab6.cpp  lab6.hpp  main.cpp
alymov/lab_6/math/: matrix.hpp  solver.cpp  solver.hpp
alymov/lab_6/report/: lr-6.odt
alymov/lab_8/: CMakeLists.txt  Makefile  README.md  lab_8.cpp  lab_8.hpp  lab_8.py  main.cpp  main.py  prog  sol.csv
alymov/lab_8/labs/: lab_8.cpp  lab_8.hpp  main.cpp
alymov/lab_8/math/: matrix.cpp  matrix.hpp  solver.cpp  solver.hpp
alymov/lab_8/report/: lr-8.docx  lr-8.odt
cursework/: cursework_var1.py  generation_matrix_nxn.py  matrix10.txt  matrix100.txt  matrix50.txt
dondokov-vladislav-igorevich/: cp.py  lab7.py  lab8.py
gilmanova/: MainWindow.xaml  NumericsLabs.sln
lab6/: laba6.py
lab_5/: README.md  lab_5.py  solver.py
lab_6/: Makefile  draw.py  lab6.cpp  lab6.hpp  lab_6.cpp  lab_6.hpp  main.cpp  main.py  matrix.hpp  prog  sol.csv  solver.cpp  solver.hpp
laba5/: lab5_var3.py
laba6/: lab6_var3.py
laba7/: lab7_var3.py
laba8/: lab8_var3.py
legostaev/: nm_cp.ipynb
tasks/: .~lock.Лабораторная работа 5 (1).doc#  .~lock.Лабораторная работа 6 (2).doc#
КП/: cp.py
Курсовой проект/: cp.py
ЛР 5/: lab5.py
ЛР 6/: lab6.py
ЛР 7/: lab7.py
ЛР 8/: lab8.py
ЛР5/: lab5.py
ЛР6/: lab6.py
ЛР7/: lab7.py
ЛР8/: lab8.py
(+193 files in other folders)
